# InkSplatter

./: .gitignore  LICENSE  README.md  inky_helper.py  network_led.py  pyproject.toml  server.py
cloud_functions/get_image/: main.py
embedded/: pyproject.toml
server/: Dockerfile  main.py  pyproject.toml
src/: led.py  main.py  server.py  useful.py  wlan.py
