[tool.poetry]
name = "inksplatter"
version = "0.1.0"
description = "Software for my inkyframe"
authors = ["Izzy Lancaster <avrisaac555@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
Pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
micropython-rp2-pico-w-stubs = "^1.20.0.post2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
